--- a/style.css
+++ b/style.css
@@ -1,116 +1,226 @@
-  body {
-    background-image: url('https://images.unsplash.com/photo-1592818868295-f527dbac420d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NXx8fGVufDB8fHx8&w=1000&q=80');
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #ffffff;
-    text-align: center;
-  }
-  nav {
-    /* background-color: #333333; */
-    background-color: black;
-    overflow: hidden;
-    border-radius: 15px;
+/* Reset styles */
+* {
+  /* margin: 0;
+  padding: 0; */
+  /* box-sizing: border-box; */
+}
+
+body {
+  /* background-image: url('https://images.unsplash.com/photo-1533000759938-aa0ba70beceb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&w=1000&q=80'); */
+  background-size: cover;
+  background-image: url('https://www.pvnccdsb.on.ca/wp-content/uploads/2020/04/iStock-1129579339-1024x683.jpg');
+  background-repeat: no-repeat;
+  color: #ffffff;
+  text-align: center;
+  background-attachment: fixed;
+  background-position: center center;
+}
+
+        .fa-telegram {
+            color: #0088cc;
+        }
+        .fa-telegram:hover {
+            color: white;
+        }
+
+        .fa-facebook {
+            color: #3b5998;
+        }
+        .fa-facebook:hover {
+            color: white;
+        }
+        .fa-instagram {
+            color: #e4405f;
+        }
+        .fa-instagram:hover {
+            color: white;
+        }
+        .fa-twitter {
+          color: #0088cc;
+        }
+        .fa-twitter:hover{
+          color: white  ;
+        }
+
+/*
+#tel:hover{
+  color: black;
+
+}
+
+#fac:hover{
+  color: black;
+
+}
+
+#twi:hover{
+  color: black;
+
+}
+
+#ins:hover{
+  color: black;
+
+} */
+
+nav {
+  /* background-color: black; */
+  /* background-color: #303030; */
+  overflow: hidden;
+  border-radius: 15px;
+}
+nav a {
+  float: left;
+  display: block;
+  /* color: #ffffff; */
+  color: black;
+  font-weight: bolder;
+  text-align: center;
+  padding: 30px 20px;
+  text-decoration: none;
+}
+#hom{
+  padding-left: 300px;
+}
+nav a:hover {
+  /* background-color: #111111; */
+}
+.logo {
+  font-size: 13px;
+  padding: 0px;
+}
+
+.imgLogo{
+    padding-top: 7px;
+    padding-bottom: 0px;
+    padding-left: 20px;
+    width: 100px ;
+    height: 60px;
+}
+h1 {
+  font-size: 72px;
+  margin-top: 200px;
+  margin-bottom: 50px;
+}
+p {
+  font-size: 24px;
+}
+.banner{
+  /* background-color:   #966F33; */
+  /* position: absolute; */
+  /* top: 50%; */
+  /* left: 30%; */
+  background-color: black;
+  opacity: 50%;
+  border-radius: 50px;
+}
+
+.banner h1 {
+color: white;
+opacity: 100%;
+/* color: #ffffff; */
+font-style: serif;
+font-size: 48px;
+font-weight: bolder;
+text-transform: uppercase;
+letter-spacing: 2px;
+margin-bottom: 20px;
+}
+
+.banner .sub-text {
+/* color: black; */
+color: #ffffff;
+font-size: 24px;
+font-weight: bolder;
+margin-bottom: 40px;
+}
+
+.social-icons {
+  /* background-color: white; */
+margin-bottom: 62px;
+padding-bottom: 20px;
+display: flex;
+justify-content: center;
+}
+
+.social-icons a {
+/* color: #fff; */
+color: black;
+font-size: 30px;
+margin: 0 20px;
+}
+
+.social-icons a:hover {
+color: gray;
+}
+
+#follw{
+  color: lightgreen;
+  font-weight: bolder;
+  font-style: italic;
+  text-shadow: 5px;
+}
+
+
+@media screen and (max-width: 600px) {
+  #hom{
+    padding-left: 10px;
   }
   nav a {
     float: left;
-    display: block;
-    color: #ffffff;
-    /* color: black; */
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
   }
-  nav a:hover {
-    background-color: #111111;
-  }
-  .logo {
-    font-size: 13px;
-    padding: 20px;
-    padding-right: 300px;
-  }
-  h1 {
-    font-size: 72px;
-    margin-top: 200px;
-    margin-bottom: 50px;
-  }
-  p {
-    font-size: 24px;
-  }
-
-  .banner h1 {
-  /* color: #fff; */
-  color: gray;
-  font-size: 48px;
-  font-weight: bolder;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-bottom: 20px;
-  }
-
-  .banner .sub-text {
-  /* color: #fff; */
-  color: black;
-  font-size: 24px;
-  font-weight: bolder;
-  margin-bottom: 40px;
-  }
-
-  .social-icons {
-  padding-top: 40px;
-  display: flex;
-  justify-content: center;
-  }
-
-  .social-icons a {
-  /* color: #fff; */
-  color: black;
-  font-size: 38px;
-  margin: 0 10px;
-  }
-
-  .social-icons a:hover {
-  color: gray;
-  }
-
-
-
-  @media screen and (max-width: 600px) {
-    nav a {
-      float: none;
-    }
-    nav {
-       display: inline-flex;
-    }
-    nav a:nth-child(odd) {
-      order: 1;
-    }
-    nav a:nth-child(even) {
-      order: 2;
-    }
-    nav a:nth-child(5) {
-      order: 3;
-    }
-    nav a:nth-child(6) {
-      order: 4;
-    }
-  }
-
-
-  @media (max-width: 768px) {
   nav {
-       display: inline-flex;
-    }
+     display: inline-flex;
+  }
+  /* nav a:nth-child(odd) {
+    order: 1;
+  }
+  nav a:nth-child(even) {
+    order: 2;
+  }
+  nav a:nth-child(5) {
+    order: 3;
+  }
+  nav a:nth-child(6) {
+    order: 4;
+  } */
+  .banner{
+    position: absolute;
+    /* top: 50%; */
+    left: 30%;
+    background-color: black;
+    opacity: 50%;
+    border-radius: 50px;
+  }
+}
 
-  .banner h1 {
-  font-size: 36px;
+
+@media (max-width: 768px) {
+  #hom{
+    padding-left: 10px;
+  }
+nav {
+     display: inline-flex;
   }
 
-  .banner .sub-text {
-  	font-size: 18px;
-  }
+.banner h1 {
+font-size: 36px;
+}
 
-  .social-icons a {
-  	font-size: 20px;
-  }
+.banner .sub-text {
+  font-size: 18px;
+}
 
+.social-icons a {
+  font-size: 20px;
+}
+
+.banner{
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  background-color: black;
+  opacity: 50%;
+  border-radius: 50px;
+}
 }
